# reflective-color-sensor

./: .gitmodules  CMakeLists.txt  README.md  calibracion.py  configureBuild.sh
circuitos/filtro_antialiasing/: filtro_antialiasing.kicad_prl  filtro_antialiasing.kicad_pro  filtro_antialiasing.kicad_sch  resp_frec.wbk
circuitos/fuente-corriente-paralelo/: fuente-corriente-paralelo.kicad_pcb  fuente-corriente-paralelo.kicad_prl  fuente-corriente-paralelo.kicad_pro  fuente-corriente-paralelo.kicad_sch  ~fuente-corriente-paralelo.kicad_sch.lck
circuitos/fuente-corriente-paralelo-transistores/: fp-info-cache  fuente-corriente-paralelo-transistores.kicad_pcb  fuente-corriente-paralelo-transistores.kicad_prl  fuente-corriente-paralelo-transistores.kicad_pro  fuente-corriente-paralelo-transistores.kicad_sch  fuente-corriente-paralelo-transistores.kicad_sch-bak  sensores.kicad_sch  sym-lib-table
code/src/: CMakeLists.txt
code/src/lib/web_server/content/: action_response.json  hello.html
code/src/scripts/: configure_serial_port.sh
firmware/: README.md
firmware/src/: calibracion.c  filter.h  main.c
firmware/src/lib/lcd/: internal.h  lcd.c
firmware/src/lib/lcd/include/: lcd.h
firmware/src/lib/web_server/: CMakeLists.txt  example_server.c  web_server.h
firmware/src/lib/web_server/content/: color_response.json
informe_tp_integrador_2024/: Bibliography.bib  main.tex
informes/informe_tp_integrador_2024/: structure.tex
scripts/: calibracion.py  filtro_antialiasing.m  filtro_digital.m  receive_and_plot.py
src/: CMakeLists.txt  filter.c  filter.h  main.c  main3.c
src/lib/lcd/: CMakeLists.txt  internal.h  lcd.c
src/lib/lcd/include/: lcd.h
src/lib/web_server/: CMakeLists.txt  example_server.c  lwipopts.h  main.c  web_server.c  web_server.h
src/lib/web_server/content/: 404.html  index.shtml
src/scripts/: receive.py
